infra/k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: panta19l/client
---

apiVersion: v1
kind: Service
metadata:
  name:  client-srv
spec:
  selector:
    app:  client
  type:  ClusterIP
  ports:
  - name:  client
    port:  3000
    targetPort:  3000
