infra/k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: panta19l/comments
---

apiVersion: v1
kind: Service
metadata:
  name:  comments-srv
spec:
  selector:
    app:  comments
  type:  ClusterIP
  ports:
  - name:  comments
    port:  4001
    targetPort:  4001
