infra/k8s/event-bus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: panta19l/event-bus

---
apiVersion: v1
kind: Service
metadata: 
  name:  event-bus-serv
spec:
  selector:
    app: event-bus-serv
  type: ClusterIP
  ports:
    - name:  event-bus-serv
      protocol: TCP
      port: 4005
      targetPort: 4005
