infra/k8s/moderation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderations-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderations
  template:
    metadata:
      labels:
        app: moderations
    spec:
      containers:
      - name: moderations
        image: panta19l/moderations
---

apiVersion: v1
kind: Service
metadata:
  name:  moderations-srv
spec:
  selector:
    app:  moderations
  type:  ClusterIP
  ports:
  - name:  moderations
    port:  4003
    targetPort:  4003
