infra/k8s/posts-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: panta19l/posts

---
apiVersion: v1
kind: Service
metadata: 
  name:  posts-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name:  posts
      protocol: TCP
      port: 4000
      targetPort: 4000
