infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-serv
spec:
  selector:
    app:  posts
  type:   NodePort
  ports:
  - name:  posts
    port:  4000
    targetPort:  4000
