infra/k8s/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: panta19l/query
---

apiVersion: v1
kind: Service
metadata:
  name:  query-srv
spec:
  selector:
    app:  query
  type:  ClusterIP
  ports:
  - name:  query
    port:  4002
    targetPort:  4002
